--- a/test.ipynb
+++ b/test.ipynb
@@ -7,7 +7,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --upgrade huggingface_hub[hf_xet] hf_xet peft diffusers transformers accelerate"
+    "!python3 -m pip install --upgrade pip\n",
+    "!export MAKEFLAGS=\"-j$(nproc)\"\n",
+    "!pip install numpy torch\n",
+    "!pip install --upgrade huggingface_hub[hf_xet] hf_xet peft diffusers transformers accelerate xformers flash-attn"
    ]
   },
   {
@@ -44,17 +47,46 @@
     "!git clone https://github.com/ltdrdata/ComfyUI-Manager comfyui-manager\n",
     "!git clone https://github.com/Suzie1/ComfyUI_Comfyroll_CustomNodes.git\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "!git clone https://github.com/jags111/efficiency-nodes-comfyui.git # for upscaler workflow\n",
+    "!git clone https://github.com/rgthree/rgthree-comfy.git\n",
+    "!git clone https://github.com/kijai/ComfyUI-KJNodes.git\n",
+    "!git clone https://github.com/chflame163/ComfyUI_LayerStyle.git\n",
+    "!git clone --recursive https://github.com/ssitu/ComfyUI_UltimateSDUpscale.git\n",
+    "!git clone https://github.com/chflame163/ComfyUI_LayerStyle.git\n",
+    "!cd ComfyUI_LayerStyle && pip install -r requirements.txt\n",
+    "\n",
+    "%cd /root/char/ComfyUI/models/checkpoints\n",
+    "! [ -f \"epicphotogasm_ultimateFidelity.safetensors\" ] || curl -L \"https://civitai.com/api/download/models/429454?type=Model&format=SafeTensor&size=pruned&fp=fp16\" -o epicphotogasm_ultimateFidelity.safetensors\n",
+    "\n",
+    "%cd /root/char/ComfyUI/models/controlnet\n",
+    "! [ -f \"diffusion_pytorch_model.bin\" ] || curl -LO \"https://huggingface.co/lllyasviel/control_v11f1e_sd15_tile/resolve/main/diffusion_pytorch_model.bin\"\n",
+    "! [ -f \"control_v11p_sd15_lineart.pth\" ] || curl -LO \"https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_lineart.pth\"\n",
+    "\n",
+    "%cd /root/char/ComfyUI/models/upscale_models\n",
+    "! [ -f \"1x-ITF-SkinDiffDetail-Lite-v1.pth\" ] || curl -LO \"https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/1x-ITF-SkinDiffDetail-Lite-v1.pth\"\n",
+    "! [ -f \"4xFaceUpDAT.pth\" ] || curl -LO \"https://huggingface.co/deeenko/lora1/resolve/2d9a6f28fcbf740139ad1a36b6e2af0d66cdfb8b/4xFaceUpDAT.pth\" # yes, both are needed\n",
+    "! [ -f \"4xFaceUpSharpLDAT.pth\" ] || curl -LO \"https://huggingface.co/Phips/4xFaceUpSharpLDAT/resolve/main/4xFaceUpSharpLDAT.safetensors\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "%cd /root/char/ComfyUI/models/vae\n",
-    "!curl -LOz \"https://huggingface.co/Comfy-Org/Lumina_Image_2.0_Repackaged/resolve/main/split_files/vae/ae.safetensors\"\n",
+    "!curl -LO \"https://huggingface.co/Comfy-Org/Lumina_Image_2.0_Repackaged/resolve/main/split_files/vae/ae.safetensors\"\n",
+    "! [ -f \"ae.safetensors\" ] || curl -LO \"https://huggingface.co/Comfy-Org/Lumina_Image_2.0_Repackaged/resolve/main/split_files/vae/ae.safetensors\"\n",
     "\n",
     "%cd /root/char/ComfyUI/models/text_encoders\n",
-    "!curl -LOz \"https://huggingface.co/comfyanonymous/flux_text_encoders/resolve/main/clip_l.safetensors\"\n",
-    "# !curl -LOz \"https://huggingface.co/comfyanonymous/flux_text_encoders/resolve/main/t5xxl_fp8_e4m3fn_scaled.safetensors\"\n",
-    "!curl -LOz \"https://huggingface.co/comfyanonymous/flux_text_encoders/resolve/main/t5xxl_fp16.safetensors\"\n",
+    "! [ -f \"clip_l.safetensors\" ] || curl -LO \"https://huggingface.co/comfyanonymous/flux_text_encoders/resolve/main/clip_l.safetensors\"\n",
+    "# ! [ -f \"t5xxl_fp8_e4m3fn_scaled.safetensors\" ] || curl -LO \"https://huggingface.co/comfyanonymous/flux_text_encoders/resolve/main/t5xxl_fp8_e4m3fn_scaled.safetensors\"\n",
+    "! [ -f \"t5xxl_fp16.safetensors\" ] || curl -LO \"https://huggingface.co/comfyanonymous/flux_text_encoders/resolve/main/t5xxl_fp16.safetensors\"\n",
     "\n",
     "%cd /root/char/ComfyUI/models/diffusion_models\n",
-    "!curl -LOz \"https://huggingface.co/Comfy-Org/flux1-kontext-dev_ComfyUI/resolve/main/split_files/diffusion_models/flux1-dev-kontext_fp8_scaled.safetensors\"\n",
-    "# !curl -LOz \"https://huggingface.co/black-forest-labs/FLUX.1-Kontext-dev/resolve/main/flux1-kontext-dev.safetensors\"\n",
+    "! [ -f \"flux1-dev-kontext_fp8_scaled.safetensors\" ] || curl -LO \"https://huggingface.co/Comfy-Org/flux1-kontext-dev_ComfyUI/resolve/main/split_files/diffusion_models/flux1-dev-kontext_fp8_scaled.safetensors\"\n",
+    "# ! [ -f \"flux1-kontext-dev.safetensors\" ] || curl -LO \"https://huggingface.co/black-forest-labs/FLUX.1-Kontext-dev/resolve/main/flux1-kontext-dev.safetensors\"\n",
     "\n",
     "\n",
     "# !huggingface-cli download black-forest-labs/FLUX.1-dev flux1-dev.safetensors --local-dir /root/char/ComfyUI/models/unet\n",
@@ -74,7 +106,7 @@
     "# curl -fsSL https://pkg.cloudflare.com/cloudflare-main.gpg | sudo tee /usr/share/keyrings/cloudflare-main.gpg >/dev/null\n",
     "# echo 'deb [signed-by=/usr/share/keyrings/cloudflare-main.gpg] https://pkg.cloudflare.com/cloudflared any main' | sudo tee /etc/apt/sources.list.d/cloudflared.list\n",
     "# sudo apt-get update && sudo apt-get install cloudflared\n",
-    "# cloudflared tunnel --protocol http2 --url http://localhost:8000 # on some machine gotta remove \"--protocol http2\"\n",
+    "# cloudflared tunnel --url http://localhost:8000 --protocol http2 # on some machine gotta remove \"--protocol http2\"\n",
     "\n",
     "%cd /root/char\n",
     "!python3 ComfyUI/main.py --port 8000"
