--- a/test.ipynb
+++ b/test.ipynb
@@ -54,7 +54,7 @@
     "!git clone https://github.com/jags111/efficiency-nodes-comfyui.git # for upscaler workflow\n",
     "!git clone https://github.com/rgthree/rgthree-comfy.git\n",
     "!git clone https://github.com/kijai/ComfyUI-KJNodes.git\n",
-    "!git clone https://github.com/chflame163/ComfyUI_LayerStyle.git\n",
+    "!git clone https://github.com/chflame163/ComfyUI_LayerStyle.git # skin detailer also requires installation of \"latest\" ComfyUI_LayerStyle_Advance via nodes manager\n",
     "!git clone --recursive https://github.com/ssitu/ComfyUI_UltimateSDUpscale.git\n",
     "!git clone https://github.com/chflame163/ComfyUI_LayerStyle.git\n",
     "!cd ComfyUI_LayerStyle && pip install -r requirements.txt\n",
@@ -110,64 +110,6 @@
     "\n",
     "%cd /root/char\n",
     "!python3 ComfyUI/main.py --port 8000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7aef56d3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "from diffusers import FluxKontextPipeline\n",
-    "from diffusers.utils import load_image\n",
-    "import time\n",
-    "\n",
-    "pipe = FluxKontextPipeline.from_pretrained(\n",
-    "    \"black-forest-labs/FLUX.1-Kontext-dev\",\n",
-    "    torch_dtype=torch.bfloat16,\n",
-    "    # attn_implementation=\"flash_attention_2\",\n",
-    ").to(\"cuda\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28496ee8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pipe.load_lora_weights(\"kudzueye/Boreal\", weight_name=\"boreal-flux-dev-lora-v04_1000_steps.safetensors\", adapter_name=\"boreal\")\n",
-    "pipe.set_adapters([\"boreal\"], [0.7])\n",
-    "pipe.fuse_lora()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34142974",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_image = load_image(\"https://i.pinimg.com/1200x/30/c7/c0/30c7c096959245ce68c47faa4302c4bf.jpg\")\n",
-    "\n",
-    "generator = torch.Generator(device=\"cuda\").manual_seed(0)\n",
-    "\n",
-    "guidance = 2.5\n",
-    "steps = 40\n",
-    "\n",
-    "image = pipe(\n",
-    "    image=input_image,\n",
-    "    prompt=\"Make a close up photo of her on a neutral background looking straight at the camera wearing a white tank top\",\n",
-    "    guidance_scale=guidance,\n",
-    "    num_inference_steps=steps,\n",
-    "    generator=generator,\n",
-    "    width=944,\n",
-    "    height=1104,\n",
-    ").images[0]\n",
-    "\n",
-    "image.save(f\"out/{guidance}_{steps}.jpg\")"
    ]
   }
  ],
