--- a/train.ipynb
+++ b/train.ipynb
@@ -162,6 +162,95 @@
     "%cd /root/char\n",
     "!python3 ComfyUI/main.py --port 8000"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37863ef6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# new  Python 3.11 virtual-env (optional but recommended)\n",
+    "!python -m venv flux-lora && source flux-lora/bin/activate\n",
+    "\n",
+    "# !pip install -U diffusers transformers accelerate bitsandbytes safetensors datasets peft huggingface-hub wandb  # wandb optional, just for training charts\n",
+    "\n",
+    "!hf download black-forest-labs/FLUX.1-dev --local-dir flux_base\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ddb3d73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "pip uninstall -y flash-attn\n",
+    "\n",
+    "# 2) Re-install a compatible build\n",
+    "#    Use \"--no-build-isolation\" so it reuses your venv’s torch/cuBLAS headers.\n",
+    "#    For CUDA 12.x on a 4090 this will compile for sm_89 in ~5–7 min.\n",
+    "pip install flash-attn==2.8.0 --no-build-isolation --no-cache-dir\n",
+    "\n",
+    "wget -O compute_embeddings.py \\\n",
+    "  https://raw.githubusercontent.com/huggingface/diffusers/main/examples/research_projects/flux_lora_quantization/compute_embeddings.py\n",
+    "\n",
+    "python3 compute_embeddings.py \\\n",
+    "   --image_dir dataset \\\n",
+    "   --caption_extension \".txt\" \\\n",
+    "   --output_path \"embeddings.parquet\" \\\n",
+    "   --max_sequence_length 77"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "295a348f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "pip install transformers accelerate optimum auto-gptq pickleshare safetensors pymongo json5 diffusers protobuf peft hf_transfer supabase bitsandbytes torchvision\n",
+    "pip install xformers \"xfuser[diffusers,flash-attn]\"\n",
+    "pip install bitsandbytes torchvision triton\n",
+    "pip install \"flash-attn>=2.7.1,<=2.8.0\" --no-build-isolation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6a62129",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "accelerate launch --config_file=accelerate.yaml \\\n",
+    "    train_dreambooth_lora_flux_miniature.py \\\n",
+    "  --pretrained_model_name_or_path ./flux_base \\\n",
+    "  --instance_data_dir ./train \\\n",
+    "  --class_data_dir    ./reg \\\n",
+    "  --output_dir lumifawn_lora_flux \\\n",
+    "  --instance_prompt \"lumifawn woman\" \\\n",
+    "  --class_prompt \"a woman\" \\\n",
+    "  --mixed_precision bf16 \\\n",
+    "  --use_8bit_adam \\\n",
+    "  --width 1024 --height 1024 \\\n",
+    "  --train_batch_size 1 \\\n",
+    "  --learning_rate 4e-4 \\\n",
+    "  --caption_dropout 0.15 \\\n",
+    "  --guidance_scale 1 \\\n",
+    "  --gradient_accumulation_steps 4 \\\n",
+    "  --gradient_checkpointing \\\n",
+    "  --cache_latents \\\n",
+    "  --rank 96 \\\n",
+    "  --max_train_steps 1200 --checkpointing_steps 200 \\\n",
+    "  --lr_scheduler cosine --lr_warmup_steps 100 \\\n",
+    "  --seed 42"
+   ]
   }
  ],
  "metadata": {
