--- a/train.ipynb
+++ b/train.ipynb
@@ -83,89 +83,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b721a5d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ComfyUI setup\n",
-    "%cd  /root/char\n",
-    "!git clone https://github.com/comfyanonymous/ComfyUI.git\n",
-    "%cd /root/char/ComfyUI\n",
-    "!pip install -r requirements.txt\n",
-    "!mkdir -p /root/char/ComfyUI/custom_nodes\n",
-    "%cd /root/char/ComfyUI/custom_nodes\n",
-    "!git clone https://github.com/ltdrdata/ComfyUI-Manager comfyui-manager\n",
-    "!git clone https://github.com/Suzie1/ComfyUI_Comfyroll_CustomNodes.git\n",
-    "!git clone https://github.com/un1tz3r0/comfyui-node-collection.git\n",
-    "!git clone https://github.com/theUpsider/ComfyUI-Logic.git\n",
-    "!git clone https://github.com/WASasquatch/was-node-suite-comfyui.git\n",
-    "!git clone https://github.com/chrisgoringe/cg-image-picker.git\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "!git clone https://github.com/jags111/efficiency-nodes-comfyui.git # for upscaler workflow\n",
-    "!git clone https://github.com/rgthree/rgthree-comfy.git\n",
-    "!git clone https://github.com/kijai/ComfyUI-KJNodes.git\n",
-    "!git clone https://github.com/chflame163/ComfyUI_LayerStyle.git # skin detailer also requires installation of \"latest\" ComfyUI_LayerStyle_Advance via nodes manager\n",
-    "!git clone https://github.com/chflame163/ComfyUI_LayerStyle.git\n",
-    "!cd ComfyUI_LayerStyle && pip install -r requirements.txt\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# %cd /root/char/ComfyUI/models/vae\n",
-    "# ! [ -f \"ae.safetensors\" ] || curl -LO \"https://huggingface.co/Comfy-Org/Lumina_Image_2.0_Repackaged/resolve/main/split_files/vae/ae.safetensors\"\n",
-    "\n",
-    "%cd /root/char/ComfyUI/models/text_encoders\n",
-    "# ! [ -f \"clip_l.safetensors\" ] || curl -LO \"https://huggingface.co/comfyanonymous/flux_text_encoders/resolve/main/clip_l.safetensors\"\n",
-    "! [ -f \"t5xxl_fp8_e4m3fn_scaled.safetensors\" ] || curl -LO \"https://huggingface.co/comfyanonymous/flux_text_encoders/resolve/main/t5xxl_fp8_e4m3fn_scaled.safetensors\"\n",
-    "# ! [ -f \"t5xxl_fp16.safetensors\" ] || curl -LO \"https://huggingface.co/comfyanonymous/flux_text_encoders/resolve/main/t5xxl_fp16.safetensors\"\n",
-    "\n",
-    "%cd /root/char/ComfyUI/models/diffusion_models\n",
-    "! [ -f \"flux1-dev-kontext_fp8_scaled.safetensors\" ] || curl -LO \"https://huggingface.co/Comfy-Org/flux1-kontext-dev_ComfyUI/resolve/main/split_files/diffusion_models/flux1-dev-kontext_fp8_scaled.safetensors\"\n",
-    "# ! [ -f \"flux1-kontext-dev.safetensors\" ] || curl -LO \"https://huggingface.co/black-forest-labs/FLUX.1-Kontext-dev/resolve/main/flux1-kontext-dev.safetensors\"\n",
-    "! [ -f \"flux1-fill-dev.safetensors\" ] || curl -LO \"https://huggingface.co/black-forest-labs/FLUX.1-Fill-dev/blob/main/flux1-fill-dev.safetensors\"\n",
-    "\n",
-    "%cd /root/char/ComfyUI/models/checkpoints\n",
-    "! [ -f \"flux1-dev-fp8.safetensors\" ] || curl -LO \"https://huggingface.co/Comfy-Org/flux1-dev/resolve/main/flux1-dev-fp8.safetensors\"\n",
-    "# ! [ -f \"512-inpainting-ema.safetensors\" ] || curl -LO \"https://huggingface.co/stabilityai/stable-diffusion-2-inpainting/resolve/main/512-inpainting-ema.safetensors\"\n",
-    "! [ -f \"juggernautXL_juggXIByRundiffusion.safetensors\" ] || curl -L \"https://civitai.com/api/download/models/1759168?type=Model&format=SafeTensor&size=full&fp=fp16\" -o juggernautXL_juggXIByRundiffusion.safetensors\n",
-    "\n",
-    "%cd /root/char/ComfyUI/models/controlnet\n",
-    "! [ -f \"diffusion_pytorch_model_promax.safetensors\" ] || curl -LO \"https://huggingface.co/xinsir/controlnet-union-sdxl-1.0/resolve/main/diffusion_pytorch_model_promax.safetensors\"\n",
-    "\n",
-    "\n",
-    "%cd /root/char/ComfyUI/models/upscale_models\n",
-    "! [ -f \"4x-UltraSharp.pth\" ] || curl -LO \"https://huggingface.co/lokCX/4x-Ultrasharp/resolve/main/4x-UltraSharp.pth\"\n",
-    "\n",
-    "# !hf download black-forest-labs/FLUX.1-dev flux1-dev.safetensors --local-dir /root/char/ComfyUI/models/unet\n",
-    "# !hf download black-forest-labs/FLUX.1-Fill-dev flux1-fill-dev.safetensors --local-dir /root/char/ComfyUI/models/unet\n",
-    "\n",
-    "!hf download black-forest-labs/FLUX.1-dev ae.safetensors --local-dir /root/char/ComfyUI/models/vae\n",
-    "!hf download comfyanonymous/flux_text_encoders clip_l.safetensors --local-dir /root/char/ComfyUI/models/clip\n",
-    "!hf download comfyanonymous/flux_text_encoders t5xxl_fp16.safetensors --local-dir /root/char/ComfyUI/models/clip\n",
-    "\n",
-    "# %cd /root/char/ComfyUI/models/loras\n",
-    "# !hf download kudzueye/Boreal boreal-flux-dev-lora-v04_1000_steps.safetensors --local-dir /root/char/ComfyUI/models/loras\n",
-    "# !hf download Shakker-Labs/FLUX.1-dev-LoRA-AntiBlur FLUX-dev-lora-AntiBlur.safetensors --local-dir /root/char/ComfyUI/models/loras\n",
-    "# !hf download Shakker-Labs/AWPortrait-FL AWPortrait-FL-lora.safetensors --local-dir /root/char/ComfyUI/models/loras\n",
-    "# %cd /root/char/ComfyUI\n",
-    "\n",
-    "# sudo mkdir -p --mode=0755 /usr/share/keyrings\n",
-    "# curl -fsSL https://pkg.cloudflare.com/cloudflare-main.gpg | sudo tee /usr/share/keyrings/cloudflare-main.gpg >/dev/null\n",
-    "# echo 'deb [signed-by=/usr/share/keyrings/cloudflare-main.gpg] https://pkg.cloudflare.com/cloudflared any main' | sudo tee /etc/apt/sources.list.d/cloudflared.list\n",
-    "# sudo apt-get update && sudo apt-get install cloudflared\n",
-    "# cloudflared tunnel --url http://localhost:8000 --protocol http2 # on some machine gotta remove \"--protocol http2\"\n",
-    "\n",
-    "%cd /root/char\n",
-    "!python3 ComfyUI/main.py --port 8000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "37863ef6",
    "metadata": {},
    "outputs": [],
@@ -213,10 +130,22 @@
    "source": [
     "%%bash\n",
     "\n",
-    "pip install transformers accelerate optimum auto-gptq pickleshare safetensors pymongo json5 diffusers protobuf peft hf_transfer supabase bitsandbytes torchvision\n",
-    "pip install xformers \"xfuser[diffusers,flash-attn]\"\n",
-    "pip install bitsandbytes torchvision triton\n",
-    "pip install \"flash-attn>=2.7.1,<=2.8.0\" --no-build-isolation"
+    "python3 -m venv flux-env\n",
+    "source flux-env/bin/activate\n",
+    "python3 -m pip install -U pip wheel setuptools\n",
+    "\n",
+    "export MAKEFLAGS=\"-j$(nproc)\"\n",
+    "\n",
+    "pip install torch==2.3.1+cu121 --index-url https://download.pytorch.org/whl/cu121\n",
+    "pip install torchvision==0.18.1+cu121 --index-url https://download.pytorch.org/whl/cu121   # swap cu121 ↔ cu118 if needed\n",
+    "pip install \"xformers==0.0.25.post1\" --no-binary xformers --verbose\n",
+    "pip install -U peft==0.16.2 accelerate==0.30.1\n",
+    "pip install bitsandbytes==0.43.1\n",
+    "\n",
+    "pip install diffusers==0.27.2 transformers==4.43.0 safetensors datasets wandb protobuf==4.25.3 \\\n",
+    "           optimum auto-gptq pickleshare safetensors pymongo json5 hf_transfer bitsandbytes torchvision wandb triton\n",
+    "pip install \"flash-attn>=2.7.1,<=2.8.0\" --no-build-isolation --no-cache-dir\n",
+    "pip install \"xfuser[diffusers,flash-attn]\""
    ]
   },
   {
@@ -228,28 +157,53 @@
    "source": [
     "%%bash\n",
     "\n",
+    "source flux-env/bin/activate\n",
     "accelerate launch --config_file=accelerate.yaml \\\n",
     "    train_dreambooth_lora_flux_miniature.py \\\n",
-    "  --pretrained_model_name_or_path ./flux_base \\\n",
-    "  --instance_data_dir ./train \\\n",
-    "  --class_data_dir    ./reg \\\n",
+    "  --pretrained_model_name_or_path black-forest-labs/FLUX.1-dev \\\n",
+    "  --data_df_path embeddings.parquet \\\n",
     "  --output_dir lumifawn_lora_flux \\\n",
-    "  --instance_prompt \"lumifawn woman\" \\\n",
-    "  --class_prompt \"a woman\" \\\n",
     "  --mixed_precision bf16 \\\n",
     "  --use_8bit_adam \\\n",
-    "  --width 1024 --height 1024 \\\n",
+    "  --resolution 1024 \\\n",
     "  --train_batch_size 1 \\\n",
     "  --learning_rate 4e-4 \\\n",
-    "  --caption_dropout 0.15 \\\n",
     "  --guidance_scale 1 \\\n",
     "  --gradient_accumulation_steps 4 \\\n",
     "  --gradient_checkpointing \\\n",
     "  --cache_latents \\\n",
     "  --rank 96 \\\n",
-    "  --max_train_steps 1200 --checkpointing_steps 200 \\\n",
-    "  --lr_scheduler cosine --lr_warmup_steps 100 \\\n",
+    "  --max_train_steps 1200 \\\n",
+    "  --checkpointing_steps 200 \\\n",
+    "  --lr_scheduler cosine \\\n",
+    "  --lr_warmup_steps 100 \\\n",
     "  --seed 42"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5876a6c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "# pip install flash_attn-2.7.4.post1 --no-build-isolation --no-cache-dir\n",
+    "pip install https://huggingface.co/spaces/Wauplin/gradio_logsview/resolve/main/gradio_logsview-0.0.5-py3-none-any.whl\n",
+    "git clone https://github.com/cocktailpeanut/fluxgym\n",
+    "cd fluxgym\n",
+    "python3 -m venv env\n",
+    "source env/bin/activate\n",
+    "pip install gradio slugify hf-transfer timm huggingface-hub bitsandbytes torchvision wandb triton  --upgrade\n",
+    "pip install -r requirements.txt\n",
+    "git clone -b sd3 https://github.com/kohya-ss/sd-scripts\n",
+    "cd sd-scripts\n",
+    "pip install -r requirements.txt\n",
+    "cd ..\n",
+    "python3 app.py\n",
+    "\n",
+    "pwd"
    ]
   }
  ],
