--- a/test.ipynb
+++ b/test.ipynb
@@ -63,9 +63,10 @@
     "!git clone https://github.com/kijai/ComfyUI-KJNodes.git\n",
     "!git clone https://github.com/chflame163/ComfyUI_LayerStyle.git # skin detailer also requires installation of \"latest\" ComfyUI_LayerStyle_Advance via nodes manager\n",
     "%cd ComfyUI_LayerStyle && pip install -r requirements.txt\n",
-    "%cd ..\n",
+    "# %cd ..\n",
     "!git clone https://github.com/chflame163/ComfyUI_LayerStyle_Advance.git\n",
-    "%cd ComfyUI_LayerStyle_Advance && pip install -r requirements.txt\n",
+    "%cd ComfyUI_LayerStyle_Advance\n",
+    "!pip install -r requirements.txt\n",
     "\n",
     "\n",
     "\n",
@@ -89,7 +90,7 @@
     "! [ -f \"flux1-dev-fp8.safetensors\" ] || curl -LO \"https://huggingface.co/Comfy-Org/flux1-dev/resolve/main/flux1-dev-fp8.safetensors\"\n",
     "# ! [ -f \"512-inpainting-ema.safetensors\" ] || curl -LO \"https://huggingface.co/stabilityai/stable-diffusion-2-inpainting/resolve/main/512-inpainting-ema.safetensors\"\n",
     "# ! [ -f \"juggernautXL_juggXIByRundiffusion.safetensors\" ] || curl -L \"https://civitai.com/api/download/models/1759168?type=Model&format=SafeTensor&size=full&fp=fp16\" -o juggernautXL_juggXIByRundiffusion.safetensors\n",
-    "! [ -f \"epicphotogasm_ultimateFidelity.safetensors\" ] || curl -LO \"https://civitai.com/api/download/models/429454?type=Model&format=SafeTensor&size=pruned&fp=fp16\" -o epicphotogasm_ultimateFidelity.safetensors\n",
+    "! [ -f \"epicphotogasm_ultimateFidelity.safetensors\" ] || curl -L \"https://civitai.com/api/download/models/429454?type=Model&format=SafeTensor&size=pruned&fp=fp16\" -o epicphotogasm_ultimateFidelity.safetensors\n",
     "\n",
     "\n",
     "%cd /root/char/ComfyUI/models/controlnet\n",
@@ -130,7 +131,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -144,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
