--- a/train.ipynb
+++ b/train.ipynb
@@ -188,19 +188,22 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "\n",
+    "# all this has to be paste in to the terminal + set up CF tunnel\n",
     "# pip install flash_attn-2.7.4.post1 --no-build-isolation --no-cache-dir\n",
+    "pip install --upgrade pip\n",
     "pip install https://huggingface.co/spaces/Wauplin/gradio_logsview/resolve/main/gradio_logsview-0.0.5-py3-none-any.whl\n",
     "git clone https://github.com/cocktailpeanut/fluxgym\n",
     "cd fluxgym\n",
     "python3 -m venv env\n",
     "source env/bin/activate\n",
-    "pip install gradio slugify hf-transfer timm huggingface-hub bitsandbytes torchvision wandb triton  --upgrade\n",
+    "pip install gradio slugify hf-transfer timm huggingface-hub torchvision wandb  --upgrade\n",
     "pip install -r requirements.txt\n",
     "git clone -b sd3 https://github.com/kohya-ss/sd-scripts\n",
     "cd sd-scripts\n",
     "pip install -r requirements.txt\n",
     "cd ..\n",
+    "pip install huggingface-hub==0.25.2\n",
+    "pip install triton bitsandbytes --upgrade\n",
     "python3 app.py\n",
     "\n",
     "pwd"
@@ -209,7 +212,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -223,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
