--- a/test.ipynb
+++ b/test.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1b721a5d",
    "metadata": {},
    "outputs": [],
@@ -45,28 +45,32 @@
     "!pip install -r requirements.txt\n",
     "!mkdir -p /root/char/ComfyUI/custom_nodes\n",
     "%cd /root/char/ComfyUI/custom_nodes\n",
-    "!git clone https://github.com/ltdrdata/ComfyUI-Manager comfyui-manager\n",
-    "!git clone https://github.com/Suzie1/ComfyUI_Comfyroll_CustomNodes.git\n",
-    "!git clone https://github.com/un1tz3r0/comfyui-node-collection.git\n",
-    "!git clone https://github.com/theUpsider/ComfyUI-Logic.git\n",
-    "!git clone https://github.com/WASasquatch/was-node-suite-comfyui.git\n",
-    "!git clone https://github.com/chrisgoringe/cg-image-picker.git\n",
-    "!git clone https://github.com/ZenAI-Vietnam/ComfyUI-Kontext-Inpainting.git\n",
-    "!git clone https://github.com/ChenDarYen/ComfyUI-NAG.git\n",
-    "!git clone https://github.com/alexopus/ComfyUI-Image-Saver.git\n",
+    "!git clone https://github.com/ltdrdata/ComfyUI-Manager comfyui-manager --depth 1 --single-branch\n",
+    "!git clone https://github.com/Suzie1/ComfyUI_Comfyroll_CustomNodes.git --depth 1 --single-branch\n",
+    "!git clone https://github.com/un1tz3r0/comfyui-node-collection.git --depth 1 --single-branch\n",
+    "!git clone https://github.com/theUpsider/ComfyUI-Logic.git --depth 1 --single-branch\n",
+    "!git clone https://github.com/WASasquatch/was-node-suite-comfyui.git --depth 1 --single-branch\n",
+    "# !git clone https://github.com/chrisgoringe/cg-image-picker.git --depth 1 --single-branch\n",
+    "# !git clone https://github.com/ZenAI-Vietnam/ComfyUI-Kontext-Inpainting.git --depth 1 --single-branch\n",
+    "# !git clone https://github.com/ChenDarYen/ComfyUI-NAG.git --depth 1 --single-branch\n",
+    "# !git clone https://github.com/alexopus/ComfyUI-Image-Saver.git --depth 1 --single-branch\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "!git clone https://github.com/jags111/efficiency-nodes-comfyui.git # for upscaler workflow\n",
-    "!git clone https://github.com/rgthree/rgthree-comfy.git\n",
-    "!git clone https://github.com/kijai/ComfyUI-KJNodes.git\n",
-    "!git clone https://github.com/chflame163/ComfyUI_LayerStyle.git # skin detailer also requires installation of \"latest\" ComfyUI_LayerStyle_Advance via nodes manager\n",
-    "%cd ComfyUI_LayerStyle && pip install -r requirements.txt\n",
-    "# %cd ..\n",
-    "!git clone https://github.com/chflame163/ComfyUI_LayerStyle_Advance.git\n",
-    "%cd ComfyUI_LayerStyle_Advance\n",
+    "!git clone https://github.com/ClownsharkBatwing/RES4LYF.git --depth 1 --single-branch\n",
+    "%cd RES4LYF\n",
     "!pip install -r requirements.txt\n",
+    "%cd ..\n",
+    "\n",
+    "\n",
+    "\n",
+    "# !git clone https://github.com/jags111/efficiency-nodes-comfyui.git --depth 1 --single-branch # for upscaler workflow\n",
+    "!git clone https://github.com/rgthree/rgthree-comfy.git --depth 1 --single-branch\n",
+    "# !git clone https://github.com/kijai/ComfyUI-KJNodes.git --depth 1 --single-branch\n",
+    "# !git clone https://github.com/chflame163/ComfyUI_LayerStyle.git --depth 1 --single-branch # skin detailer also requires installation of \"latest\" ComfyUI_LayerStyle_Advance via nodes manager\n",
+    "# %cd ComfyUI_LayerStyle && pip install -r requirements.txt\n",
+    "# # %cd ..\n",
+    "# !git clone https://github.com/chflame163/ComfyUI_LayerStyle_Advance.git --depth 1 --single-branch\n",
+    "# %cd ComfyUI_LayerStyle_Advance\n",
+    "# !pip install -r requirements.txt\n",
     "\n",
     "\n",
     "\n",
@@ -78,31 +82,32 @@
     "\n",
     "%cd /root/char/ComfyUI/models/text_encoders\n",
     "# ! [ -f \"clip_l.safetensors\" ] || curl -LO \"https://huggingface.co/comfyanonymous/flux_text_encoders/resolve/main/clip_l.safetensors\"\n",
-    "! [ -f \"t5xxl_fp8_e4m3fn_scaled.safetensors\" ] || curl -LO \"https://huggingface.co/comfyanonymous/flux_text_encoders/resolve/main/t5xxl_fp8_e4m3fn_scaled.safetensors\"\n",
+    "# ! [ -f \"t5xxl_fp8_e4m3fn_scaled.safetensors\" ] || curl -LO \"https://huggingface.co/comfyanonymous/flux_text_encoders/resolve/main/t5xxl_fp8_e4m3fn_scaled.safetensors\"\n",
     "# ! [ -f \"t5xxl_fp16.safetensors\" ] || curl -LO \"https://huggingface.co/comfyanonymous/flux_text_encoders/resolve/main/t5xxl_fp16.safetensors\"\n",
     "\n",
     "%cd /root/char/ComfyUI/models/diffusion_models\n",
-    "! [ -f \"flux1-dev-kontext_fp8_scaled.safetensors\" ] || curl -LO \"https://huggingface.co/Comfy-Org/flux1-kontext-dev_ComfyUI/resolve/main/split_files/diffusion_models/flux1-dev-kontext_fp8_scaled.safetensors\"\n",
+    "# ! [ -f \"flux1-dev-kontext_fp8_scaled.safetensors\" ] || curl -LO \"https://huggingface.co/Comfy-Org/flux1-kontext-dev_ComfyUI/resolve/main/split_files/diffusion_models/flux1-dev-kontext_fp8_scaled.safetensors\"\n",
     "# ! [ -f \"flux1-kontext-dev.safetensors\" ] || curl -LO \"https://huggingface.co/black-forest-labs/FLUX.1-Kontext-dev/resolve/main/flux1-kontext-dev.safetensors\"\n",
     "# ! [ -f \"flux1-fill-dev.safetensors\" ] || curl -LO \"https://huggingface.co/black-forest-labs/FLUX.1-Fill-dev/blob/main/flux1-fill-dev.safetensors\"\n",
+    "!hf download lodestones/Chroma chroma-unlocked-v48-detail-calibrated.safetensors --local-dir /root/char/ComfyUI/models/diffusion_models\n",
     "\n",
     "%cd /root/char/ComfyUI/models/checkpoints\n",
     "! [ -f \"flux1-dev-fp8.safetensors\" ] || curl -LO \"https://huggingface.co/Comfy-Org/flux1-dev/resolve/main/flux1-dev-fp8.safetensors\"\n",
     "# ! [ -f \"512-inpainting-ema.safetensors\" ] || curl -LO \"https://huggingface.co/stabilityai/stable-diffusion-2-inpainting/resolve/main/512-inpainting-ema.safetensors\"\n",
     "# ! [ -f \"juggernautXL_juggXIByRundiffusion.safetensors\" ] || curl -L \"https://civitai.com/api/download/models/1759168?type=Model&format=SafeTensor&size=full&fp=fp16\" -o juggernautXL_juggXIByRundiffusion.safetensors\n",
-    "! [ -f \"epicphotogasm_ultimateFidelity.safetensors\" ] || curl -L \"https://civitai.com/api/download/models/429454?type=Model&format=SafeTensor&size=pruned&fp=fp16\" -o epicphotogasm_ultimateFidelity.safetensors\n",
+    "# ! [ -f \"epicphotogasm_ultimateFidelity.safetensors\" ] || curl -L \"https://civitai.com/api/download/models/429454?type=Model&format=SafeTensor&size=pruned&fp=fp16\" -o epicphotogasm_ultimateFidelity.safetensors\n",
     "\n",
     "\n",
     "%cd /root/char/ComfyUI/models/controlnet\n",
     "# ! [ -f \"diffusion_pytorch_model_promax.safetensors\" ] || curl -LO \"https://huggingface.co/xinsir/controlnet-union-sdxl-1.0/resolve/main/diffusion_pytorch_model_promax.safetensors\"\n",
-    "! [ -f \"control_v11p_sd15_lineart.pth\" ] || curl -LO \"https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_lineart.pth\"\n",
-    "! [ -f \"diffusion_pytorch_model.bin\" ] || curl -LO \"https://huggingface.co/lllyasviel/control_v11f1e_sd15_tile/resolve/main/diffusion_pytorch_model.bin\" # sd15/control_v11p_sd15_tile\n",
+    "# ! [ -f \"control_v11p_sd15_lineart.pth\" ] || curl -LO \"https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_lineart.pth\"\n",
+    "# ! [ -f \"diffusion_pytorch_model.bin\" ] || curl -LO \"https://huggingface.co/lllyasviel/control_v11f1e_sd15_tile/resolve/main/diffusion_pytorch_model.bin\" # sd15/control_v11p_sd15_tile\n",
     "\n",
     "%cd /root/char/ComfyUI/models/upscale_models\n",
-    "! [ -f \"4x-UltraSharp.pth\" ] || curl -LO \"https://huggingface.co/lokCX/4x-Ultrasharp/resolve/main/4x-UltraSharp.pth\"\n",
-    "! [ -f \"4xFaceUpSharpLDAT.safetensors\" ] || curl -LO \"https://huggingface.co/Phips/4xFaceUpSharpLDAT/resolve/main/4xFaceUpSharpLDAT.safetensors\"\n",
-    "! [ -f \"1x-ITF-SkinDiffDetail-Lite-v1.pth\" ] || curl -LO \"https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/1x-ITF-SkinDiffDetail-Lite-v1.pth\"\n",
-    "! [ -f \"4xFaceUpDAT.pth\" ] || curl -LO \"https://huggingface.co/eendy/upscale-models/resolve/main/4xFaceUpDAT.pth\"\n",
+    "# ! [ -f \"4x-UltraSharp.pth\" ] || curl -LO \"https://huggingface.co/lokCX/4x-Ultrasharp/resolve/main/4x-UltraSharp.pth\"\n",
+    "# ! [ -f \"4xFaceUpSharpLDAT.safetensors\" ] || curl -LO \"https://huggingface.co/Phips/4xFaceUpSharpLDAT/resolve/main/4xFaceUpSharpLDAT.safetensors\"\n",
+    "# ! [ -f \"1x-ITF-SkinDiffDetail-Lite-v1.pth\" ] || curl -LO \"https://huggingface.co/uwg/upscaler/resolve/main/ESRGAN/1x-ITF-SkinDiffDetail-Lite-v1.pth\"\n",
+    "# ! [ -f \"4xFaceUpDAT.pth\" ] || curl -LO \"https://huggingface.co/eendy/upscale-models/resolve/main/4xFaceUpDAT.pth\"\n",
     "\n",
     "# !hf download black-forest-labs/FLUX.1-dev flux1-dev.safetensors --local-dir /root/char/ComfyUI/models/unet\n",
     "# !hf download black-forest-labs/FLUX.1-Fill-dev flux1-fill-dev.safetensors --local-dir /root/char/ComfyUI/models/unet\n",
@@ -113,9 +118,9 @@
     "\n",
     "%cd /root/char/ComfyUI/models/loras\n",
     "!hf download kudzueye/Boreal boreal-flux-dev-lora-v04_1000_steps.safetensors --local-dir /root/char/ComfyUI/models/loras\n",
-    "# !hf download Shakker-Labs/FLUX.1-dev-LoRA-AntiBlur FLUX-dev-lora-AntiBlur.safetensors --local-dir /root/char/ComfyUI/models/loras\n",
-    "# !hf download Shakker-Labs/AWPortrait-FL AWPortrait-FL-lora.safetensors --local-dir /root/char/ComfyUI/models/loras\n",
-    "!gdown --id 1V9LXUI4HQjjzpRzqI19lk6K-qdwoyDvb -O lf1200.safetensors\n",
+    "!hf download Shakker-Labs/FLUX.1-dev-LoRA-AntiBlur FLUX-dev-lora-AntiBlur.safetensors --local-dir /root/char/ComfyUI/models/loras\n",
+    "!hf download Shakker-Labs/AWPortrait-FL AWPortrait-FL-lora.safetensors --local-dir /root/char/ComfyUI/models/loras\n",
+    "# !gdown --id 1V9LXUI4HQjjzpRzqI19lk6K-qdwoyDvb -O lf1200.safetensors\n",
     "# %cd /root/char/ComfyUI\n",
     "\n",
     "# sudo mkdir -p --mode=0755 /usr/share/keyrings\n",
@@ -131,7 +136,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -145,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
