--- a/test.ipynb
+++ b/test.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1b721a5d",
    "metadata": {},
    "outputs": [],
@@ -131,6 +131,44 @@
     "\n",
     "%cd /root/char\n",
     "!python3 ComfyUI/main.py --port 8000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4933dd80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!set -e\n",
+    "\n",
+    "!echo \"=== FaceFusion Fix Script ===\"\n",
+    "!echo \"Applying fixes to resolve circular import error and disable NSFW checks...\"\n",
+    "\n",
+    "# Navigate to the facefusion directory\n",
+    "%cd /root/char/facefusion\n",
+    "\n",
+    "# Fix 1: Fix the circular import error in facefusion.py\n",
+    "!echo \"1. Fixing circular import error in facefusion.py...\"\n",
+    "!sed -i 's/from facefusion import core/import sys\\nimport os\\nsys.path.append(os.path.join(os.path.dirname(__file__), \"facefusion\"))\\nfrom facefusion import core/' facefusion.py\n",
+    "\n",
+    "# Fix 2: Disable NSFW checks in content_analyser.py\n",
+    "!echo \"2. Disabling NSFW checks in content_analyser.py...\"\n",
+    "!sed -i '/def detect_nsfw(vision_frame : VisionFrame) -> bool:/,/return is_nsfw_1 and is_nsfw_2 or is_nsfw_1 and is_nsfw_3 or is_nsfw_2 and is_nsfw_3/c\\def detect_nsfw(vision_frame : VisionFrame) -> bool:\\n\\treturn False' facefusion/content_analyser.py\n",
+    "\n",
+    "# Fix 3: Install required dependencies\n",
+    "!echo \"3. Installing required dependencies...\"\n",
+    "!pip install -r requirements.txt\n",
+    "\n",
+    "!echo \"=== All fixes applied successfully! ===\"\n",
+    "!echo \"\"\n",
+    "!echo \"Summary of changes:\"\n",
+    "!echo \"1. Fixed circular import: Updated facefusion.py to properly import core module\"\n",
+    "!echo \"2. Disabled NSFW checks: detect_nsfw() now always returns False\"\n",
+    "!echo \"3. Installed dependencies: Ensured all required packages are available\"\n",
+    "!echo \"\"\n",
+    "!echo \"You can now run FaceFusion with:\"\n",
+    "!echo \"conda activate facefusion && python facefusion.py run --open-browser\""
    ]
   }
  ],
