--- a/train.ipynb
+++ b/train.ipynb
@@ -10,7 +10,7 @@
     "!python3 -m pip install --upgrade pip\n",
     "!export MAKEFLAGS=\"-j$(nproc)\"\n",
     "!pip install numpy torch\n",
-    "!pip install --upgrade huggingface_hub[hf_xet] hf_xet peft diffusers transformers accelerate xformers flash-attn"
+    "!pip install --upgrade huggingface_hub[hf_xet] hf_xet peft diffusers transformers accelerate xformers # flash-attn"
    ]
   },
   {
@@ -37,47 +37,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!conda create -n facefusion python=3.12 pip=25.0 -y\n",
-    "!conda init bash\n",
-    "!exec \"$SHELL\" \n",
-    "!conda activate facefusion\n",
+    "%%bash\n",
     "\n",
-    "!git clone https://github.com/facefusion/facefusion\n",
-    "!cd facefusion\n",
-    "!python install.py --onnxruntime cuda     # or  --onnxruntime default  for CPU\n",
+    "conda create -n facefusion python=3.12 pip=25.0 -y\n",
+    "conda init bash\n",
+    "exec \"$SHELL\"\n",
+    "conda activate facefusion\n",
     "\n",
-    "!python facefusion.py run --open-browser\n",
+    "git clone https://github.com/facefusion/facefusion\n",
     "\n",
+    "set -e\n",
     "\n",
-    "!set -e\n",
+    "echo \"=== FaceFusion Fix Script ===\"\n",
+    "echo \"Applying fixes to resolve circular import error and disable NSFW checks...\"\n",
     "\n",
-    "!echo \"=== FaceFusion Fix Script ===\"\n",
-    "!echo \"Applying fixes to resolve import errors and disable NSFW checks...\"\n",
+    "sed -i '/def detect_nsfw/,/def detect_with_nsfw_1/{//!d}' facefusion/content_analyser.py \\\n",
+    "  && sed -i '/def detect_nsfw/a\\       return False' facefusion/content_analyser.py \\\n",
+    "# Set is_valid = True\n",
+    "  && sed -i 's/^ *is_valid = .*/       is_valid = True/' facefusion/core.py\n",
     "\n",
-    "# Navigate to the facefusion directory\n",
-    "!cd /root/char/facefusion\n",
+    "# inside conda\n",
+    "sudo apt update\n",
+    "sudo apt install -y libcudnn9-cuda-12 libcudnn9-dev-cuda-12\n",
+    "sudo ldconfig\n",
+    "conda install -c nvidia cudnn=9.11 -y \n",
+    "# Set runtime path once per shell\n",
+    "export LD_LIBRARY_PATH=$CONDA_PREFIX/lib:$LD_LIBRARY_PATH\n",
     "\n",
-    "# Fix 1: Fix the import error in uis/core.py\n",
-    "!echo \"1. Fixing import error in uis/core.py...\"\n",
-    "!sed -i 's/from facefusion.uis.typing import Component, ComponentName/from facefusion.uis.types import Component, ComponentName/' facefusion/uis/core.py\n",
+    "python3 install.py --onnxruntime cuda     # or  --onnxruntime default  for CPU\n",
     "\n",
-    "# Fix 2: Disable NSFW checks in content_analyser.py\n",
-    "!echo \"2. Disabling NSFW checks in content_analyser.py...\"\n",
-    "!sed -i '/def detect_nsfw(vision_frame : VisionFrame) -> bool:/,/return is_nsfw_1 and is_nsfw_2 or is_nsfw_1 and is_nsfw_3 or is_nsfw_2 and is_nsfw_3/c\\def detect_nsfw(vision_frame : VisionFrame) -> bool:\\n\\treturn False' facefusion/content_analyser.py\n",
-    "\n",
-    "# Fix 3: Update the hash check in core.py\n",
-    "!echo \"3. Updating hash check in core.py...\"\n",
-    "!sed -i \"s/is_valid = hash_helper.create_hash(content_analyser_content) == 'b159fd9d'/is_valid = hash_helper.create_hash(content_analyser_content) == '3dda9b45'/\" facefusion/core.py\n",
-    "\n",
-    "!echo \"=== All fixes applied successfully! ===\"\n",
-    "!echo \"\"\n",
-    "!echo \"Summary of changes:\"\n",
-    "!echo \"1. Fixed import error: facefusion.uis.typing -> facefusion.uis.types\"\n",
-    "!echo \"2. Disabled NSFW checks: detect_nsfw() now always returns False\"\n",
-    "!echo \"3. Updated hash validation: Changed expected hash from 'b159fd9d' to '3dda9b45'\"\n",
-    "!echo \"\"\n",
-    "!echo \"You can now run FaceFusion with:\"\n",
-    "!echo \"conda activate facefusion && python facefusion.py run --open-browser\""
+    "python3 facefusion.py run --open-browser"
    ]
   },
   {
@@ -93,91 +82,6 @@
     "# !pip install -U diffusers transformers accelerate bitsandbytes safetensors datasets peft huggingface-hub wandb  # wandb optional, just for training charts\n",
     "\n",
     "!hf download black-forest-labs/FLUX.1-dev --local-dir flux_base\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9ddb3d73",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "\n",
-    "pip uninstall -y flash-attn\n",
-    "\n",
-    "# 2) Re-install a compatible build\n",
-    "#    Use \"--no-build-isolation\" so it reuses your venv’s torch/cuBLAS headers.\n",
-    "#    For CUDA 12.x on a 4090 this will compile for sm_89 in ~5–7 min.\n",
-    "pip install flash-attn==2.8.0 --no-build-isolation --no-cache-dir\n",
-    "\n",
-    "wget -O compute_embeddings.py \\\n",
-    "  https://raw.githubusercontent.com/huggingface/diffusers/main/examples/research_projects/flux_lora_quantization/compute_embeddings.py\n",
-    "\n",
-    "python3 compute_embeddings.py \\\n",
-    "   --image_dir dataset \\\n",
-    "   --caption_extension \".txt\" \\\n",
-    "   --output_path \"embeddings.parquet\" \\\n",
-    "   --max_sequence_length 77"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "295a348f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "\n",
-    "python3 -m venv flux-env\n",
-    "source flux-env/bin/activate\n",
-    "python3 -m pip install -U pip wheel setuptools\n",
-    "\n",
-    "export MAKEFLAGS=\"-j$(nproc)\"\n",
-    "\n",
-    "pip install torch==2.3.1+cu121 --index-url https://download.pytorch.org/whl/cu121\n",
-    "pip install torchvision==0.18.1+cu121 --index-url https://download.pytorch.org/whl/cu121   # swap cu121 ↔ cu118 if needed\n",
-    "pip install \"xformers==0.0.25.post1\" --no-binary xformers --verbose\n",
-    "pip install -U peft==0.16.2 accelerate==0.30.1\n",
-    "pip install bitsandbytes==0.43.1\n",
-    "\n",
-    "pip install diffusers==0.27.2 transformers==4.43.0 safetensors datasets wandb protobuf==4.25.3 \\\n",
-    "           optimum auto-gptq pickleshare safetensors pymongo json5 hf_transfer bitsandbytes torchvision wandb triton\n",
-    "pip install \"flash-attn>=2.7.1,<=2.8.0\" --no-build-isolation --no-cache-dir\n",
-    "pip install \"xfuser[diffusers,flash-attn]\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a6a62129",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "\n",
-    "source flux-env/bin/activate\n",
-    "accelerate launch --config_file=accelerate.yaml \\\n",
-    "    train_dreambooth_lora_flux_miniature.py \\\n",
-    "  --pretrained_model_name_or_path black-forest-labs/FLUX.1-dev \\\n",
-    "  --data_df_path embeddings.parquet \\\n",
-    "  --output_dir lumifawn_lora_flux \\\n",
-    "  --mixed_precision bf16 \\\n",
-    "  --use_8bit_adam \\\n",
-    "  --resolution 1024 \\\n",
-    "  --train_batch_size 1 \\\n",
-    "  --learning_rate 4e-4 \\\n",
-    "  --guidance_scale 1 \\\n",
-    "  --gradient_accumulation_steps 4 \\\n",
-    "  --gradient_checkpointing \\\n",
-    "  --cache_latents \\\n",
-    "  --rank 96 \\\n",
-    "  --max_train_steps 1200 \\\n",
-    "  --checkpointing_steps 200 \\\n",
-    "  --lr_scheduler cosine \\\n",
-    "  --lr_warmup_steps 100 \\\n",
-    "  --seed 42"
    ]
   },
   {
@@ -212,7 +116,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -226,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
