--- a/train.ipynb
+++ b/train.ipynb
@@ -112,6 +112,120 @@
     "\n",
     "pwd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "feead5ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "!pip install --user gdown\n",
+    "!gdown --id 1y81XF2JyHMR0PgpcbEx2tiweWjbrljbE -O dt.tar && tar -xvf dt.tar && rm dt.tar # dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b033811",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "cd /root/char\n",
+    "pip install hyvideo --upgrade\n",
+    "git clone https://github.com/tdrussell/diffusion-pipe\n",
+    "cd diffusion-pipe\n",
+    "pip install -r requirements.txt   # torch, xformers, deepspeed, etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c346bce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mkdir -p /root/char/models/chroma\n",
+    "# !hf download lodestones/Chroma chroma-unlocked-v48-detail-calibrated.safetensors --local-dir /root/char/models/chroma\n",
+    "!hf download lodestones/Chroma chroma-unlocked-v48.safetensors --local-dir /root/char/models/chroma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32e8adff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "touch /root/char/diffusion-pipe/char_chroma_lora.toml\n",
+    "mkdir -p /root/char/lora/\n",
+    "\n",
+    "cat << 'EOF' > /root/char/diffusion-pipe/char_chroma_lora.toml\n",
+    "[model]\n",
+    "type             = \"chroma\"\n",
+    "transformer_path = \"/root/char/models/chroma/chroma-unlocked-v48.safetensors\"\n",
+    "dtype            = \"bfloat16\"            # 4090 handles bf16 natively\n",
+    "flux_shift       = true                  # critical for Chroma stability\n",
+    "\n",
+    "[adapter]\n",
+    "type  = \"lora\"\n",
+    "rank  = 64                               # good trade-off  (32–128 work)\n",
+    "dtype = \"bfloat16\"\n",
+    "\n",
+    "[optimizer]\n",
+    "type          = \"adamw\"\n",
+    "lr            = 1e-4                     # Chroma blows up above 1e-3\n",
+    "betas         = [0.9, 0.99]\n",
+    "weight_decay  = 0.01\n",
+    "eps           = 1e-8\n",
+    "\n",
+    "[train]\n",
+    "resolution         = 1024\n",
+    "max_steps          = 6000                # 150 × 40 images\n",
+    "checkpoint_every   = 200\n",
+    "masked_loss_ratio  = 0.1                 # 10 % bg masking keeps likeness sharp\n",
+    "save_dir           = \"/root/char/lora/\"\n",
+    "\n",
+    "[data]\n",
+    "root         = \"/root/char/dataset\"\n",
+    "image_ext    = \"png\"\n",
+    "caption_ext  = \"txt\"\n",
+    "center_pad   = true\n",
+    "center_pad_color = \"#777777\"\n",
+    "\n",
+    "[sample]\n",
+    "# ——— WHEN  ———\n",
+    "sample_every      = 200        # fire after every 200 training steps\n",
+    "# ——— WHAT  ———\n",
+    "prompts = [\n",
+    "  \"lumifawn\",\n",
+    "  \"lumifawn standing on a balcony wearing white crop top and white tight shorts\",\n",
+    "  \"selfie of lumifawn on a tropical beach\"\n",
+    "]\n",
+    "negative_prompt   = \"low quality, bad anatomy, extra digits, missing digits, extra limbs, missing limbs, blur, bokeh\"\n",
+    "num_inference_steps = 20\n",
+    "guidance_scale      = 4.0\n",
+    "width  = 768\n",
+    "height = 768\n",
+    "\n",
+    "EOF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf219606",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "cd /root/char/diffusion-pipe && accelerate launch train.py --config char_chroma_lora.toml"
+   ]
   }
  ],
  "metadata": {
