--- a/train.ipynb
+++ b/train.ipynb
@@ -143,24 +143,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c346bce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!mkdir -p /root/char/models/chroma\n",
-    "# !hf download lodestones/Chroma chroma-unlocked-v48-detail-calibrated.safetensors --local-dir /root/char/models/chroma\n",
-    "!hf download lodestones/Chroma chroma-unlocked-v48.safetensors --local-dir /root/char/models/chroma"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "32e8adff",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "\n",
+    "# unsure about this config cell\n",
     "touch /root/char/diffusion-pipe/char_chroma_lora.toml\n",
     "mkdir -p /root/char/lora/\n",
     "\n",
@@ -218,13 +206,163 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf219606",
+   "id": "aca05256",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "\n",
-    "cd /root/char/diffusion-pipe && accelerate launch train.py --config char_chroma_lora.toml"
+    "# GPT5 written script that does work\n",
+    "\n",
+    "# Chroma LoRA Training Setup Script\n",
+    "# This script sets up the environment and fixes all issues to train Chroma LoRA\n",
+    "\n",
+    "set -e\n",
+    "\n",
+    "echo \"🚀 Setting up Chroma LoRA training environment...\"\n",
+    "\n",
+    "# 1. Install missing dependencies\n",
+    "echo \"📦 Installing dependencies...\"\n",
+    "pip install mpi4py\n",
+    "pip install flash-attn==2.8.0.post2 xformers==0.0.31.post1\n",
+    "pip install torchvision==0.22.0\n",
+    "\n",
+    "# 2. Initialize git submodules\n",
+    "echo \"🔧 Initializing git submodules...\"\n",
+    "cd /root/char/diffusion-pipe\n",
+    "git submodule update --init --recursive\n",
+    "\n",
+    "# 3. Create dataset configuration\n",
+    "echo \"📝 Creating dataset configuration...\"\n",
+    "cat > dataset.toml << 'EOF'\n",
+    "resolutions = [512]\n",
+    "\n",
+    "[[directory]]\n",
+    "path = '/root/char/dataset'\n",
+    "root = '/root/char/dataset'\n",
+    "image_ext = 'png'\n",
+    "caption_ext = 'txt'\n",
+    "center_pad = true\n",
+    "EOF\n",
+    "\n",
+    "# 4. Create main training configuration\n",
+    "echo \"⚙️ Creating training configuration...\"\n",
+    "cat > char_chroma_lora.toml << 'EOF'\n",
+    "save_every_n_steps = 200\n",
+    "dataset = 'dataset.toml'\n",
+    "output_dir = '/root/char/char_chroma'\n",
+    "epochs = 10\n",
+    "micro_batch_size_per_gpu = 1\n",
+    "gradient_accumulation_steps = 1\n",
+    "activation_checkpointing = true\n",
+    "reentrant_activation_checkpointing = true\n",
+    "\n",
+    "[model]\n",
+    "type             = 'chroma'\n",
+    "diffusers_path   = '/root/char/models/FLUX.1-dev'\n",
+    "transformer_path = '/root/char/models/chroma-unlocked-v48-detail-calibrated.safetensors'\n",
+    "dtype            = 'float16'\n",
+    "transformer_dtype = 'float16'\n",
+    "flux_shift       = true\n",
+    "\n",
+    "[adapter]\n",
+    "type  = 'lora'\n",
+    "rank  = 16\n",
+    "dtype = 'float16'\n",
+    "\n",
+    "[optimizer]\n",
+    "type          = 'adamw_optimi'\n",
+    "lr            = 2e-4\n",
+    "betas         = [0.9, 0.99]\n",
+    "weight_decay  = 0.01\n",
+    "eps           = 1e-8\n",
+    "\n",
+    "[train]\n",
+    "# 28 images → ~150 steps per image is a good start\n",
+    "max_steps          = 60000\n",
+    "resolution         = 512\n",
+    "masked_loss_ratio  = 0.10          # 10% background masking (matches the Reddit note)\n",
+    "checkpoint_every   = 200\n",
+    "save_dir           = '/root/char/char_chroma'\n",
+    "bucket_reso        = true           # keep your mixed 1024^2 and 800x1200 set \"as is\"\n",
+    "min_bucket_reso    = 512\n",
+    "max_bucket_reso    = 512\n",
+    "bucket_step        = 64\n",
+    "# If you OOM on a 24 GB card, add:\n",
+    "gradient_checkpointing = true\n",
+    "\n",
+    "[data]\n",
+    "root         = '/root/char/dataset'     # folder containing 0.jpg…27.jpg and 0.txt…27.txt\n",
+    "image_ext    = 'png'\n",
+    "caption_ext  = 'txt'\n",
+    "center_pad   = true                  # keep full 800x1200 frames; set to false to crop instead\n",
+    "\n",
+    "# Optional automatic samples every checkpoint (kept minimal)\n",
+    "[sample]\n",
+    "sample_every        = 200\n",
+    "prompts             = [\n",
+    "  \"lumifawn\",\n",
+    "  \"lumifawn standing on a balcony wearing white crop top and white tight shorts\",\n",
+    "  \"selfie of lumifawn on a tropical beach\"\n",
+    "]\n",
+    "negative_prompt     = \"extra limbs, text artifacts\"\n",
+    "num_inference_steps = 25\n",
+    "guidance_scale      = 4.0\n",
+    "width               = 1024\n",
+    "height              = 1024\n",
+    "dtype               = 'fp16'\n",
+    "EOF\n",
+    "\n",
+    "# 5. Modify Chroma model directly for memory optimization\n",
+    "echo \"🔧 Modifying Chroma model for memory optimization...\"\n",
+    "\n",
+    "# Backup original file\n",
+    "cp models/chroma.py models/chroma.py.backup\n",
+    "\n",
+    "# Use sed to modify the file directly\n",
+    "sed -i '/self.diffusers_pipeline = diffusers.FluxPipeline.from_pretrained/a\\\n",
+    "        # Move VAE and text encoders to CPU to save GPU memory\\\n",
+    "        if hasattr(self.diffusers_pipeline, \"vae\"):\\\n",
+    "            self.diffusers_pipeline.vae = self.diffusers_pipeline.vae.to(\"cpu\")\\\n",
+    "        if hasattr(self.diffusers_pipeline, \"text_encoder\"):\\\n",
+    "            self.diffusers_pipeline.text_encoder = self.diffusers_pipeline.text_encoder.to(\"cpu\")\\\n",
+    "        if hasattr(self.diffusers_pipeline, \"text_encoder_2\"):\\\n",
+    "            self.diffusers_pipeline.text_encoder_2 = self.diffusers_pipeline.text_encoder_2.to(\"cpu\")\\\n",
+    "        if hasattr(self.diffusers_pipeline, \"tokenizer\"):\\\n",
+    "            self.diffusers_pipeline.tokenizer = self.diffusers_pipeline.tokenizer\\\n",
+    "        if hasattr(self.diffusers_pipeline, \"tokenizer_2\"):\\\n",
+    "            self.diffusers_pipeline.tokenizer_2 = self.diffusers_pipeline.tokenizer_2' models/chroma.py\n",
+    "\n",
+    "# Add transformer to GPU after the precision conversion\n",
+    "sed -i '/p.data = p.data.to(transformer_dtype)/a\\\n",
+    "        # Ensure transformer is on GPU for LoRA training\\\n",
+    "        self.transformer = self.diffusers_pipeline.transformer.to(\"cuda\")' models/chroma.py\n",
+    "\n",
+    "# 6. Create debug script for testing config\n",
+    "echo \"🐛 Creating debug script...\"\n",
+    "cat > debug_config.py << 'EOF'\n",
+    "import toml\n",
+    "import json\n",
+    "\n",
+    "with open('char_chroma_lora.toml') as f:\n",
+    "    config = json.loads(json.dumps(toml.load(f)))\n",
+    "\n",
+    "print(\"Config keys:\", list(config.keys()))\n",
+    "print(\"save_every_n_steps in config:\", 'save_every_n_steps' in config)\n",
+    "print(\"save_every_n_epochs in config:\", 'save_every_n_epochs' in config)\n",
+    "if 'save_every_n_steps' in config:\n",
+    "    print(\"save_every_n_steps value:\", config['save_every_n_steps'])\n",
+    "EOF\n",
+    "\n",
+    "# 7. Test the configuration\n",
+    "echo \"🧪 Testing configuration...\"\n",
+    "python3 debug_config.py\n",
+    "\n",
+    "# 8. Run the training\n",
+    "echo \"🎯 Starting training...\"\n",
+    "PYTORCH_CUDA_ALLOC_CONF=expandable_segments:True accelerate launch train.py --config char_chroma_lora.toml\n",
+    "\n",
+    "echo \"✅ Setup complete! Training should now work with memory optimizations.\""
    ]
   }
  ],
